--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,9 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jCharts-0.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/jchart2d-3.2.2 2/jchart2d-3.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jchart2d-3.2.2 2/xmlgraphics-commons-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jchart2d-3.2.2 2/jide-oss-2.9.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="lib/vecmath.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4/commons-io-2.4-javadoc.jar"/>
